--- a/style.css
+++ b/style.css
@@ -105,78 +105,115 @@
   /* box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset; */
 }
 
-
 /* CSS FOR TEAM PROFILE***************** */
 
-.team_profile{
-    /* background-color: blueviolet; */
-    width: 100%;
+.team_profile {
+  /* background-color: blueviolet; */
+  width: 100%;
 }
 
-.team1{
-    margin: auto;
-    /* background-color: rgb(60, 60, 146); */
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.team1 {
+  margin: auto;
+  /* background-color: rgb(60, 60, 146); */
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-.profile1{
-    margin: 5px;
-    /* background-color: rgb(91, 172, 117); */
-    width: 18%;
-    height: 32vh;
-    border-radius: 5px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+.profile1 {
+  margin: 5px;
+  /* background-color: rgb(91, 172, 117); */
+  width: 18%;
+  height: 32vh;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-.profile1:hover{
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.63) 0px 6px 6px;
+.profile1:hover {
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.63) 0px 6px 6px;
 }
-.image{
-    height: 15%;
-    text-align: center;
+.image {
+  height: 15%;
+  text-align: center;
 }
-.about{
-    display: flex;
-    flex-direction: column;
-    /* background-color: cadetblue; */
-    height:65%;
-    padding: 10px;
-    justify-content: space-around;
-    font-family:fantasy;
-    font-size: 17px;
+.about {
+  display: flex;
+  flex-direction: column;
+  /* background-color: cadetblue; */
+  height: 65%;
+  padding: 10px;
+  justify-content: space-around;
+  font-family: fantasy;
+  font-size: 17px;
 }
-.btn{
-    height: 20%;
-    /* background-color: aqua; */
-    text-align: center;
+.btn {
+  height: 20%;
+  /* background-color: aqua; */
+  text-align: center;
 }
-.btn input{
-    background-color: rgba(135, 60, 205, 0.743);
-    margin-top: 10px;
-    width: 90%;
-    height: 65%;
-    border-radius: 5px;
-    border: none;
-    color: white;
-    font-family:monospace;
-    /* margin: auto; */
+.btn input {
+  background-color: rgba(135, 60, 205, 0.743);
+  margin-top: 10px;
+  width: 90%;
+  height: 65%;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  font-family: monospace;
+  /* margin: auto; */
 }
 
-.btn input:hover{
-    background-color:pink;
-    color: black;
+.btn input:hover {
+  background-color: pink;
+  color: black;
 }
 
 /* CSS FOR TEAM2 ********** */
 
-.team2,.team3,.team4{
-    margin: auto;
-    /* background-color: rgb(60, 60, 146); */
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.team2,
+.team3,
+.team4 {
+  margin: auto;
+  /* background-color: rgb(60, 60, 146); */
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+/* CSS FOR ALLBUTTONS ************ */
+
+.myFooter {
+  width: 92%;
+  margin: auto;
+  height: 8vh;
+  display: flex;
+  flex-direction: row;
+  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  border-radius: 10px;
+  box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.45);
+  position: sticky;
+  bottom: 0px;
+  background-color: white;
+}
+
+#allButtons {
+  margin: auto;
+  margin-left: 10px;
+  margin-right: 5px;
+  font-size: 15px;
+  padding: 10px;
+  border-radius: 20px;
+  border: none;
+  background-color: white;
+  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.09), 0 4px 2px rgba(0, 0, 0, 0.09),
+    0 8px 4px rgba(0, 0, 0, 0.09), 0 16px 8px rgba(0, 0, 0, 0.09),
+    0 32px 16px rgba(0, 0, 0, 0.09);
+}
+#allButtons:hover {
+  background-color: rgb(51, 168, 51);
+  color: white;
 }
